// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-algolia-insights destination: conversionEvents action - all fields 1`] = `
Object {
  "events": Array [
    Object {
      "currency": "HTG",
      "eventName": "U[ABpE$k",
      "eventSubtype": "purchase",
      "eventType": "view",
      "index": "U[ABpE$k",
      "objectData": Array [
        Object {
          "discount": -52282070788997.12,
          "price": -52282070788997.12,
          "quantity": -52282070788997.12,
          "queryID": "U[ABpE$k",
        },
      ],
      "objectIDs": Array [
        "U[ABpE$k",
      ],
      "queryID": "U[ABpE$k",
      "testType": "U[ABpE$k",
      "timestamp": null,
      "userToken": "U[ABpE$k",
      "value": -52282070788997.12,
    },
  ],
}
`;

exports[`Testing snapshot for actions-algolia-insights destination: conversionEvents action - required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Conversion Event",
      "eventSubtype": "purchase",
      "eventType": "conversion",
      "index": "U[ABpE$k",
      "objectIDs": Array [
        "U[ABpE$k",
      ],
      "userToken": "U[ABpE$k",
    },
  ],
}
`;

exports[`Testing snapshot for actions-algolia-insights destination: productAddedEvents action - all fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "g)$f*TeM",
      "eventType": "view",
      "index": "g)$f*TeM",
      "objectIDs": Array [
        "g)$f*TeM",
      ],
      "queryID": "g)$f*TeM",
      "testType": "g)$f*TeM",
      "timestamp": null,
      "userToken": "g)$f*TeM",
    },
  ],
}
`;

exports[`Testing snapshot for actions-algolia-insights destination: productAddedEvents action - required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Add to cart",
      "eventType": "conversion",
      "index": "g)$f*TeM",
      "objectIDs": Array [
        "g)$f*TeM",
      ],
      "userToken": "g)$f*TeM",
    },
  ],
}
`;

exports[`Testing snapshot for actions-algolia-insights destination: productClickedEvents action - all fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "LLjxSD^^GnH",
      "eventType": "conversion",
      "index": "LLjxSD^^GnH",
      "objectIDs": Array [
        "LLjxSD^^GnH",
      ],
      "positions": Array [
        -1912532923056128,
      ],
      "queryID": "LLjxSD^^GnH",
      "testType": "LLjxSD^^GnH",
      "timestamp": null,
      "userToken": "LLjxSD^^GnH",
    },
  ],
}
`;

exports[`Testing snapshot for actions-algolia-insights destination: productClickedEvents action - required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Product Clicked",
      "eventType": "click",
      "index": "LLjxSD^^GnH",
      "objectIDs": Array [
        "LLjxSD^^GnH",
      ],
      "userToken": "LLjxSD^^GnH",
    },
  ],
}
`;

exports[`Testing snapshot for actions-algolia-insights destination: productListFilteredEvents action - all fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "6O0djra",
      "eventType": "view",
      "filters": Array [
        "6O0djra:6O0djra",
      ],
      "index": "6O0djra",
      "queryID": "6O0djra",
      "testType": "6O0djra",
      "timestamp": null,
      "userToken": "6O0djra",
    },
  ],
}
`;

exports[`Testing snapshot for actions-algolia-insights destination: productListFilteredEvents action - required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Product List Filtered",
      "eventType": "click",
      "filters": Array [
        "6O0djra:6O0djra",
      ],
      "index": "6O0djra",
      "userToken": "6O0djra",
    },
  ],
}
`;

exports[`Testing snapshot for actions-algolia-insights destination: productViewedEvents action - all fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "BLFCPcmz",
      "eventType": "view",
      "index": "BLFCPcmz",
      "objectIDs": Array [
        "BLFCPcmz",
      ],
      "queryID": "BLFCPcmz",
      "testType": "BLFCPcmz",
      "timestamp": null,
      "userToken": "BLFCPcmz",
    },
  ],
}
`;

exports[`Testing snapshot for actions-algolia-insights destination: productViewedEvents action - required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Product Viewed",
      "eventType": "view",
      "index": "BLFCPcmz",
      "objectIDs": Array [
        "BLFCPcmz",
      ],
      "userToken": "BLFCPcmz",
    },
  ],
}
`;
